criaçao da DB, com um erro no sistema de transmissao de dados do ipcRender

--- a/src/pages/professores.html
+++ b/src/pages/professores.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Você está em professores</h1>
     <a href="./index.html" class="btn btn-warning">voltar</a>
-    <button class="btn btn-warning" onclick="create()">criar entrada teste</button>
+    <button class="btn btn-warning" onclick="create(`ano`, `curso`, `cursoApelido`, `periodo`)">criar entrada teste</button>
 
 </body>
 </html>
