criado um servidor PHP que escuta todas as requisiçoes da interface do electron em '/salas' e '/professores', e lida com elas segundo alguns parâmetros que a requisiçao possui, geralmente segundo o nome da chave do json enviado pelo Front End. O Front faz o envio e a recepçao dos dados com Ajax.

--- a/src/pages/professores.html
+++ b/src/pages/professores.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <script src="../js/professores.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
+
     <title>Professores</title>
 </head>
 <body>
     <h1>Você está em professores</h1>
     <a href="./index.html" class="btn btn-warning">voltar</a>
-    <button class="btn btn-warning" onclick="create(`ano`, `curso`, `cursoApelido`, `periodo`)">criar entrada teste</button>
+    <button class="btn btn-warning" onclick="doit()">criar entrada teste</button>
 
 </body>
 </html>
