--- a/src/pages/salas.html
+++ b/src/pages/salas.html
@@ -39,23 +39,20 @@
 
         <button type="button" class="btn btn-success" data-toggle="modal" data-target="#querryField"> procurar </button>
 
-        <!-- Modal -->
+        <!-- Modal create-->
         <div class="modal fade" id="newClassModal" tabindex="-1" role="dialog" aria-labelledby="newClassModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="newClassModalLabel">Modal title</h5>
-                        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">x</span>
-                        </button> -->
                     </div>
                     <div class="modal-body" id="newClassModalBody">
                         <p>Nome da classe <input type="text" name="nCName" id="nCName" class="form-control"></p>
                         <p>Apelido da classe <input type="text" name="nCNick" id="nCNick" class="form-control"></p>
                         <p>Ano Letivo da Turma <input type="number" name="year" id="year" class="form-control"
                                 placeholder="ano letivo: 1, 2 ou 3" min='1' max='3'
-                                oninput='validity.valid ? this.save = value : value = this.save;'></p>
+                                oninput="validity.valid ? this.save = value : value = this.save;"></p>
                         <p>Período das aulas <input type="text" name="period" id="period" class="form-control"
                                 placeholder="integral, manhã, tarde ..."></p>
                         <hr>
@@ -114,10 +111,10 @@
                                 <!-- Campos da busca específica -->
                                 <div class='collapse' id='restrictQuerry'>
                                     <br>
-                                    <input type="text"
-                                        name="deepQuerry" id="deepQuerry" class="form-control"
+                                    <input type="text" name="deepQuerry" id="deepQuerry" class="form-control"
                                         placeholder="busque alguma sala ou matéria" required> em
-                                    <select name="restrictQuerrySelect" class="form-select" required id='restrictQuerrySelect'>
+                                    <select name="restrictQuerrySelect" class="form-select" required
+                                        id='restrictQuerrySelect'>
                                         <option value="" selected>selecione o campo onde este dado sera pesquisado
                                         </option>
                                         <option value="classroom">Salas</option>
@@ -140,6 +137,29 @@
 
         </div>
 
+        <!-- Modal confirmation -->
+        <div class="modal fade" id="confirmation" tabindex="-1" role="dialog"
+            aria-labelledby="confirmationTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <!-- <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div> -->
+                    <div class="modal-body">
+                        <h5 id="confirmationMassange"></h5>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="declineBtn"></button>
+                        <button type="button" class="btn btn-primary" id="acceptBtn"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        //querry results
         <div class="row">
             <div class="col3">
             </div>
