criado a busca por núcleo comum, e uma busca por salas a qual falta retirar as salas repetidas

--- a/src/pages/salas.html
+++ b/src/pages/salas.html
@@ -159,7 +159,7 @@
             </div>
         </div>
 
-        //querry results
+        <!-- querry results -->
         <div class="row">
             <div class="col3">
             </div>
