--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,31 +7,55 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>kairos</title>
   <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
+  <header>
+    <h1>Kairos</h1>
+    <ul id="rodape">
+        <li><a class="nav-link" href="./index.html">Home</a></li>
+        <li><a class="nav-link" href="./professores.html">Professores</a></li>
+        <li><a class="nav-link" href="./salas.html">Salas</a></li>
+    </ul>
+  </header>
   <div class="container">
-    <h1 class="text-center">titulo</h1>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <h1 class="title">Bem-vindo ao Kairos</h1>
+    <hr>
+    <div class="linha">
+      <p class="col2">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Illum accusamus fuga suscipit perspiciatis voluptatem, 
+        repudiandae, praesentium unde tempora possimus, rem aliquam 
+        laudantium deleniti cupidita  te assumenda optio omnis in a nesciunt. 
+        <br><br>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        Esse repudiandae ipsa soluta amet, eligendi aliquid consequatur, 
+        voluptates perspiciatis pariatur, qui accusantium! Aliquid 
+        officiis sint fugiat, accusantium voluptatibus sequi dolorum omnis.
+      </p class="col2">
+      <img class="img2"src="../img/logoKairos.jpg" alt="logoKairos">
+    </div>
+    
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
       <!-- <a class="navbar-brand" href="#">Menu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button> -->
 
-      <div class="colapse navbar-colapse" id="navbarSupportedContent">
+      <!-- <div class="colapse navbar-colapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="./professores.html">Professores<span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./salas.html">Salas</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
+            </li>
+          </ul> -->
+       <!-- </div> -->
+      <!-- </nav> -->
 
+  </div>
 </body>
 
 </html>
