modo noturno adicionado e tabalea horarios iniciada

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,6 +8,8 @@
   <title>kairos</title>
   <link rel="stylesheet" href="../css/index.css" />
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
+  <script src="../js/darkmode.js" defer></script>
 </head>
 
 <body>
@@ -17,6 +19,11 @@
         <li><a class="nav-link" href="./index.html">Home</a></li>
         <li><a class="nav-link" href="./professores.html">Professores</a></li>
         <li><a class="nav-link" href="./salas.html">Salas</a></li>
+        <input type="checkbox" name="darkmode" id="change-theme">
+        <label for="change-theme">
+          <i class="bi bi-sun"></i>
+          <i class="bi bi-moon"></i>
+        </label>
     </ul>
   </header>
   <div class="container">
@@ -24,15 +31,15 @@
     <hr>
     <div class="linha">
       <p class="col2">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-        Illum accusamus fuga suscipit perspiciatis voluptatem, 
-        repudiandae, praesentium unde tempora possimus, rem aliquam 
-        laudantium deleniti cupidita  te assumenda optio omnis in a nesciunt. 
+        Kairos é um programa de gerenciamento de horários e salas, desenvolvido com o objetivo de ajudar
+        a escola ETEC Pedro Ferreira Alves como um sistema interno melhorando o escopo tecnológico da escola,
+        à fim de aprimorar a logistica interna da instituição, e consequentemente o cotidiano dos seus integrantes.
         <br><br>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-        Esse repudiandae ipsa soluta amet, eligendi aliquid consequatur, 
-        voluptates perspiciatis pariatur, qui accusantium! Aliquid 
-        officiis sint fugiat, accusantium voluptatibus sequi dolorum omnis.
+        Kairos é o nome de um deus grego do tempo. Diferente de Chronos, que regia o tempo linear, Kairos 
+        se preocupava com o tempo oportuno como acontece quando estamos na escola, onde cada um possuí seu proprio tempo de aprendizagem.
+        <br>
+        <br>
+        <b>Bash Cliff - III EMIA 2022</b><br>
       </p class="col2">
       <img class="img2"src="../img/logoKairos.jpg" alt="logoKairos">
     </div>
