--- a/src/pages/professores.html
+++ b/src/pages/professores.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="../css/professores.css">
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
     <script src="../js/professores.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
-
+    <script src="../js/darkmode.js" defer></script>
     <title>Professores</title>
 </head>
 <body>
@@ -19,13 +20,43 @@
             <li><a class="nav-link" href="./index.html">Home</a></li>
             <li><a class="nav-link" href="./professores.html">Professores</a></li>
             <li><a class="nav-link" href="./salas.html">Salas</a></li>
+            <li>
+                <input type="checkbox" name="darkmode" id="change-theme">
+                <label for="change-theme">
+                  <i class="bi bi-sun"></i>
+                  <i class="bi bi-moon"></i>
+                </label>
+            </li>
         </ul>
     </header>
     <div class="container">
         <h1 class="title">Você está em professores</h1>
-        <hr>
-        <!-- <a href="./index.html" class="btn btn-warning">voltar</a> -->
-        <button class="btn-cadastrar" onclick="doit()">Cadastrar Professor</button>
+        <hr>  
+            <div class="box">
+                <h2 class="text-center">Cadastro de Professor(a)</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
+                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br><br>
+                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
+                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis.
+                </p>
+                <button class="btn-cadastrar" onclick="doit()">Cadastrar Professor</button>
+    
+            </div>
+            <div class="box linha-vertical">
+                <h2 class="text-center">Registrar Horários</h2>
+                <p class="p-buscar">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
+                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis. <br><br>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
+                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis. 
+                </p>
+                <button class="btn-horarios" onclick="window.location.href ='./horarios.html'">Horarios</button>
+            </div>
     </div>
 </body>
 </html>
