--- a/src/pages/horarios.html
+++ b/src/pages/horarios.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="../css/horarios.css" />
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="../js/darkmode.js" defer></script>
   <script src="../js/horarios.js" defer></script>
 </head>
@@ -30,89 +32,120 @@
     <div class="container">
         <h1 class="title">Você está em professores</h1>
         <hr>
-        <div class="btns">
+        <div class="linha">
+          <div class="btns">
 
-        </div>
-        <div class="table">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Segunda-Feira</th>
-                <th scope="col">Terça-Feira</th>
-                <th scope="col">Quarta-Feira</th>
-                <th scope="col">Quinta-Feira</th>
-                <th scope="col">Sexta-Feira</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="segpa"></td>
-                <td><input type="checkbox" name="checkbox" id="tpa"></td>
-                <td><input type="checkbox" name="checkbox" id="qpa"></td>
-                <td><input type="checkbox" name="checkbox" id="quinpa"></td>
-                <td><input type="checkbox" name="checkbox" id="spa"></td>
-              </tr>
-              <tr>
-                <th scope="row">2 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="segsa"></td>
-                <td><input type="checkbox" name="checkbox" id="tsa"></td>
-                <td><input type="checkbox" name="checkbox" id="qsa"></td>
-                <td><input type="checkbox" name="checkbox" id="quinsa"></td>
-                <td><input type="checkbox" name="checkbox" id="ssa"></td>
-              </tr>
-              <tr>
-                <th scope="row">3 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="segta"></td>
-                <td><input type="checkbox" name="checkbox" id="tta"></td>
-                <td><input type="checkbox" name="checkbox" id="qta"></td>
-                <td><input type="checkbox" name="checkbox" id="quinta"></td>
-                <td><input type="checkbox" name="checkbox" id="sta"></td>
-              </tr>
-              <tr>
-                <th scope="row">4 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="segqa"></td>
-                <td><input type="checkbox" name="checkbox" id="tqa"></td>
-                <td><input type="checkbox" name="checkbox" id="qqa"></td>
-                <td><input type="checkbox" name="checkbox" id="quinqa"></td>
-                <td><input type="checkbox" name="checkbox" id="sqa"></td>
-              </tr>
-              <tr>
-                <th scope="row">5 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="segquina"></td>
-                <td><input type="checkbox" name="checkbox" id="tquina"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-              </tr>
-              <tr>
-                <th scope="row">6 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-              </tr>
-              <tr>
-                <th scope="row">7 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-              </tr>
-              <tr>
-                <th scope="row">8 Aula</th>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-                <td><input type="checkbox" name="checkbox" id="fcm"></td>
-              </tr>
-            </tbody>
-          </table>
-          <button type="button" class="btn-cadastrar" data-toggle="modal" data-target="#newClassModal">
-            Finalizar
-          </button>
+            <button type="button" class="btn-select" data-toggle="modal" data-target="#modalExemplo">
+              Selecionar Classe
+            </button>
+            
+            <!-- Modal -->
+            <div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title window" id="exampleModalLabel">Selecionando Classe</h5>
+                    </button>
+                  </div>
+                  <div class="modal-body window">
+                    Escolha qual classe você deseja ver ou mexer na tabela de horários. <br><br>
+                    <select name="classe" id="classe" class="form-select window">
+                      <option class="color" value="">Escolha a classe</option>
+                      <option class="color" value="emia">3EMIA</option>
+                      <option class="color" value="emia">3EMEC</option>
+                    </select>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-success">Confirmar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="table">
+            <h2 class="text-center">Tabela de horários do [SALA]</h2>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Segunda-Feira</th>
+                  <th scope="col">Terça-Feira</th>
+                  <th scope="col">Quarta-Feira</th>
+                  <th scope="col">Quinta-Feira</th>
+                  <th scope="col">Sexta-Feira</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="segpa"></td>
+                  <td><input type="checkbox" name="checkbox" id="tpa"></td>
+                  <td><input type="checkbox" name="checkbox" id="qpa"></td>
+                  <td><input type="checkbox" name="checkbox" id="quinpa"></td>
+                  <td><input type="checkbox" name="checkbox" id="spa"></td>
+                </tr>
+                <tr>
+                  <th scope="row">2 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="segsa"></td>
+                  <td><input type="checkbox" name="checkbox" id="tsa"></td>
+                  <td><input type="checkbox" name="checkbox" id="qsa"></td>
+                  <td><input type="checkbox" name="checkbox" id="quinsa"></td>
+                  <td><input type="checkbox" name="checkbox" id="ssa"></td>
+                </tr>
+                <tr>
+                  <th scope="row">3 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="segta"></td>
+                  <td><input type="checkbox" name="checkbox" id="tta"></td>
+                  <td><input type="checkbox" name="checkbox" id="qta"></td>
+                  <td><input type="checkbox" name="checkbox" id="quinta"></td>
+                  <td><input type="checkbox" name="checkbox" id="sta"></td>
+                </tr>
+                <tr>
+                  <th scope="row">4 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="segqa"></td>
+                  <td><input type="checkbox" name="checkbox" id="tqa"></td>
+                  <td><input type="checkbox" name="checkbox" id="qqa"></td>
+                  <td><input type="checkbox" name="checkbox" id="quinqa"></td>
+                  <td><input type="checkbox" name="checkbox" id="sqa"></td>
+                </tr>
+                <tr>
+                  <th scope="row">5 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="segquina"></td>
+                  <td><input type="checkbox" name="checkbox" id="tquina"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                </tr>
+                <tr>
+                  <th scope="row">6 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                </tr>
+                <tr>
+                  <th scope="row">7 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                </tr>
+                <tr>
+                  <th scope="row">8 Aula</th>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                  <td><input type="checkbox" name="checkbox" id="fcm"></td>
+                </tr>
+              </tbody>
+            </table>
+            <button type="button" class="btn-cadastrar btn btn-success" data-toggle="modal" data-target="#newClassModal">
+              Finalizar
+            </button>
+      </div>
     </div>
